<resources>
    <string name="app_name">PressHeart</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="insert_your_login_and_password">Insert your login and password</string>
    <string name="create_a_new_profile">Create a new profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="e_mail">E-mail</string>
    <string name="title_activity_main_logged_menu">Main Logged Menu</string>
    <string name="blood_pressure_categories_by_american_heat_assosiation">Blood Pressure Categories by American Heat Assosiation</string>

    <string-array name="moods">
        <item>happy</item>
        <item>tired</item>
        <item>angry</item>
        <item>sad</item>
    </string-array>
    <string name="title_activity_appointments">AppointmentsActivity</string>


</resources>