<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MainViewWindow">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView_logo"
            android:layout_width="match_parent"
            android:layout_height="397dp"
            android:layout_weight="0.01"
            android:src="@drawable/logo"
            android:contentDescription="@string/app_name"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.05"
            android:text="@string/insert_your_login_and_password"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/editTextLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.1"
            android:ems="10"
            android:hint="@string/login"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="@color/colorPrimaryDark" />

        <EditText
            android:id="@+id/editTextNumberPasswordSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.1"
            android:ems="10"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="numberPassword"
            android:textColor="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/button_log_in"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.1"
            android:background="@color/colorPrimary"
            android:text="@string/log_in"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#FFFFFF"
            android:textColorLink="#FFFFFF" />

        <Button
            android:id="@+id/button_sign_up"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.01"
            android:text="@string/sign_up" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>